fixed overflow issue in notes

--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,7 @@ img {
 
 .media-object {
   position: relative;
-  height: 16em;
+  height: max-content;
   display: flex;
   align-items: center;
 }
@@ -208,7 +208,6 @@ img {
   justify-content: space-evenly;
   align-items: flex-start;
   background-color: rgba(232, 232, 209, 0.7);
-  height: 16em;
   width: 100%;
   padding: 1em 0;
 }
@@ -223,11 +222,9 @@ img {
 
 .media__editable {
   flex: 1 1 auto;
-  height: 65%;
-  width: 80%;
   padding: 1em;
   margin-right: 5em;
-  opacity: initial;
+  margin-left: 15em;
 }
 
 .header__notes {
